--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
-Theme Name: Codeska
+Theme Name: linkpro
 Theme URI: http://underscores.me/
-Author: Codeska Project Delivery Unit
-Author URI: http://codeska.se/
-Description: Codeska Development theme
+Author: linkpro Project Delivery Unit
+Author URI: http://linkpro.se/
+Description: linkpro Development theme
 Version: 2.0.0
 License: MIT
 License URI: https://opensource.org/licenses/MIT
 Text Domain: wp-dev
 Tags: rtl-language-support
 
-Codeska is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
+linkpro is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 */
