--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,3 +1,360 @@
 .header {
-  background-color: red;
+  background-color: transparent;
+
+  .brand {
+    max-height: 50px;
+    max-width: 160px;
+    margin-right: 100px;
+    z-index: 5;
+  }
+}
+
+.navbar {
+  .navbar-toggler {
+    display: none;
+  }
+
+  .navbar-nav {
+    .main-menu-item {
+      list-style: none;
+      padding: 10px 0;
+      display: flex;
+      align-items: center;
+      -webkit-transition: color 0.2s linear, background 0.2s linear;
+      -moz-transition: color 0.2s linear, background 0.2s linear;
+      -o-transition: color 0.2s linear, background 0.2s linear;
+      transition: color 0.2s linear, background 0.2s linear;
+
+      > a {
+        background: transparent; /* menu item background color */
+        color: #878484; /* menu item text color */
+        text-transform: uppercase;
+        position: relative;
+        -webkit-transition: color 0.2s linear, background 0.2s linear;
+        -moz-transition: color 0.2s linear, background 0.2s linear;
+        -o-transition: color 0.2s linear, background 0.2s linear;
+        transition: color 0.2s linear, background 0.2s linear;
+      }
+
+      .nav-desc {
+        cursor: pointer;
+        -webkit-transition: color 0.2s linear, background 0.2s linear;
+        -moz-transition: color 0.2s linear, background 0.2s linear;
+        -o-transition: color 0.2s linear, background 0.2s linear;
+        transition: color 0.2s linear, background 0.2s linear;
+      }
+    }
+
+    .menu-item-has-children {
+      position: relative;
+
+      .sub-menu-item {
+        text-transform: uppercase;
+        background: transparent;
+        -webkit-transition: color 0.2s linear, background 0.2s linear;
+        -moz-transition: color 0.2s linear, background 0.2s linear;
+        -o-transition: color 0.2s linear, background 0.2s linear;
+        transition: color 0.2s linear, background 0.2s linear;
+
+        a {
+          -webkit-transition: color 0.2s linear, background 0.2s linear;
+          -moz-transition: color 0.2s linear, background 0.2s linear;
+          -o-transition: color 0.2s linear, background 0.2s linear;
+          transition: color 0.2s linear, background 0.2s linear;
+        }
+
+        .nav-desc {
+          -webkit-transition: color 0.2s linear, background 0.2s linear;
+          -moz-transition: color 0.2s linear, background 0.2s linear;
+          -o-transition: color 0.2s linear, background 0.2s linear;
+          transition: color 0.2s linear, background 0.2s linear;
+        }
+      }
+    }
+  }
+}
+
+/* --------------- */
+
+body._pc {
+  .navbar {
+    .navbar-nav {
+      .menu-item-has-children:hover {
+        > .sub-menu {
+          transform: translate(0, 0);
+          opacity: 1;
+          visibility: visible;
+          pointer-events: all;
+        }
+      }
+    }
+  }
+}
+
+body._touch {
+  .navbar {
+    .navbar-nav {
+      .menu-depth-1.active,
+      .menu-depth-2.active,
+      .menu-depth-3.active {
+        display: block;
+      }
+
+      .nav-desc.active {
+        transform: rotate(-180deg);
+      }
+    }
+  }
+}
+
+body.lock {
+  overflow: hidden;
+}
+
+/* --------------- */
+
+@media (min-width: 767px) {
+  .navbar {
+    .navbar-nav {
+      .main-menu-item {
+        > a {
+          &:hover,
+          &:focus,
+          &.active {
+            text-decoration: underline;
+          }
+        }
+
+        &:not(:last-child) {
+          @include adaptiv-margin-right(36, 10);
+        }
+
+        .nav-desc {
+          margin-left: 5px;
+        }
+      }
+
+      .menu-item-has-children {
+        position: relative;
+
+        .sub-menu {
+          position: absolute;
+          background: #f6f8fd;
+          width: max-content;
+          min-width: 261px;
+          z-index: 2;
+          transform: translate(0, 10%);
+          opacity: 0;
+          visibility: hidden;
+          pointer-events: none;
+          transition: all 0.3s ease 0s;
+        }
+
+        .sub-menu-item {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          a {
+            padding: 10px;
+            flex: 1 1 100%;
+          }
+
+          .nav-desc {
+            padding: 10px;
+          }
+        }
+
+        .menu-depth-1 {
+          left: 0;
+          top: 100%;
+        }
+
+        .menu-depth-2,
+        .menu-depth-3 {
+          top: 0;
+          left: 100%;
+        }
+
+        .menu-item-depth-1,
+        .menu-item-depth-2,
+        .menu-item-depth-3 {
+          font-size: 16px;
+
+          &:hover,
+          &:focus,
+          &:active {
+            background-color: darken(#f6f8fd, 10%);
+
+            > .nav-desc i {
+              transform: rotate(-90deg);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .header {
+    background-color: darken(#f6f8fd, 10%);
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+
+    &__row {
+      justify-content: space-between;
+    }
+  }
+
+  .navbar {
+    .navbar-toggler {
+      display: block;
+      position: relative;
+      width: 24px;
+      height: 18px;
+      z-index: 3;
+      background-color: transparent;
+      border: none;
+
+      span {
+        top: 50%;
+        transform: scale(1) translate(0, -50%);
+        transition: all 0.3s ease 0s;
+      }
+    }
+
+    .navbar-toggler span,
+    .navbar-toggler::before,
+    .navbar-toggler::after {
+      position: absolute;
+      left: 0;
+      height: 10%;
+      width: 100%;
+      background-color: $text-color;
+      transition: all 0.3s ease 0s;
+    }
+
+    .navbar-toggler::before,
+    .navbar-toggler::after {
+      content: '';
+    }
+
+    .navbar-toggler::before {
+      top: 0;
+    }
+
+    .navbar-toggler::after {
+      bottom: 0;
+    }
+
+    .navbar-toggler.open span {
+      transform: scale(0) translate(0, -50%);
+    }
+
+    .navbar-toggler.open::before {
+      top: 50%;
+      transform: rotate(-45deg) translate(0, -50%);
+    }
+
+    .navbar-toggler.open::after {
+      bottom: 50%;
+      transform: rotate(45deg) translate(0, 50%);
+    }
+  }
+
+  .navbar-collapse {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    transition: left 0.4s ease;
+    background: #f6f8fd;
+    padding: 70px 5% 20px;
+    overflow: auto;
+
+    .navbar-nav {
+      flex-direction: column;
+      margin-bottom: 50px;
+      margin-top: 20px;
+
+      .main-menu-item {
+        font-size: 16px;
+        border-top: 1px solid rgba(255, 255, 255, 0.5);
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+
+        > a {
+          font-weight: 600;
+          font-size: 18px;
+          padding: 10px;
+          flex: 1 1 auto;
+        }
+
+        .nav-desc {
+          padding: 10px;
+        }
+      }
+
+      .menu-item-has-children {
+        .sub-menu {
+          position: relative;
+          flex: 1 1 100%;
+          display: none;
+        }
+
+        .sub-menu-item {
+          display: flex;
+          align-items: center;
+          flex-wrap: wrap;
+
+          a {
+            font-size: 16px;
+            flex: 1 1 auto;
+            padding: 10px;
+          }
+        }
+
+        .menu-item-depth-1 {
+          > a {
+            padding-left: 30px;
+          }
+        }
+
+        .menu-item-depth-2 {
+          > a {
+            padding-left: 50px;
+          }
+        }
+
+        .menu-item-depth-3 {
+          > a {
+            padding-left: 70px;
+          }
+        }
+      }
+    }
+
+    &::after {
+      content: '';
+      position: fixed;
+      width: 100%;
+      top: 0;
+      left: 0;
+      height: 68px;
+      background-color: darken(#f6f8fd, 10%);
+      z-index: 2;
+    }
+  }
+
+  &.open {
+    display: flex;
+    flex-direction: column;
+    opacity: 1;
+    left: 0;
+    z-index: 2;
+  }
 }
