--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -11,7 +11,7 @@
   font-family: 'Inter';
   src: url('../../fonts/Inter-Medium.eot');
   src: local('☺'), url('../../fonts/Inter-Medium.woff') format('woff'), url('../../fonts/Inter-Medium.woff2') format('woff2'), url('../../fonts/Inter-Medium.ttf') format('truetype'), url('../../fonts/Inter-Medium.svg') format('svg');
-  font-weight: 600;
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -27,6 +27,14 @@
   font-family: 'Inter';
   src: url('../../fonts/Inter-Bold.eot');
   src: local('☺'), url('../../fonts/Inter-Bold.woff') format('woff'), url('../../fonts/Inter-Bold.woff2') format('woff2'), url('../../fonts/Inter-Bold.ttf') format('truetype'), url('../../fonts/Inter-Bold.svg') format('svg');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Raleway';
+  src: url('../../fonts/Raleway-SemiBold.eot');
+  src: local('☺'), url('../../fonts/Raleway-SemiBold.woff') format('woff'), url('../../fonts/Raleway-SemiBold.woff2') format('woff2'), url('../../fonts/Raleway-SemiBold.ttf') format('truetype'), url('../../fonts/Raleway-SemiBold.svg') format('svg');
   font-weight: 600;
   font-style: normal;
 }
