--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,15 +1,98 @@
-.pre-footer {
-  background-color: radial-gradient(45.56% 137.97% at 76.04% 50%, #191933 0%, #000 100%) #0d111c;
-  background-repeat: no-repeat;
-  background-attachment: local;
-  background-position: top right;
+
+.nav-footer {
+  flex: max-content;
+
+  .footer-menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+
+    @media screen and (max-width: 576px) {
+      grid-template-columns: 1fr;
+      grid-gap: 56px;
+    }
+
+    > li {
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 32px;
+      color: #e1e8f1;
+      cursor: none;
+
+      > a {
+        color: inherit;
+        margin-bottom: 28px;
+      }
+    }
+  }
+
+  .sub-menu {
+    margin-top: 28px;
+
+    li {
+      font-size: 15px;
+      line-height: 32px;
+      color: #cad5e2;
+      font-weight: 400;
+      cursor: pointer;
+      margin-bottom: 16px;
+
+      a {
+        color: inherit;
+      }
+    }
+  }
 }
 
 .site-footer {
   background: #090a0d;
   padding: 120px 0 250px;
 
-  .footer-copyright {
+  @media screen and (max-width: 768px) {
+    padding: 92px 0 160px;
+  }
+
+  &__main {
+    @include adaptiv-margin-bottom(108, 72);
+
+    @media screen and (max-width: 576px) {
+      margin-bottom: 72px;
+    }
+  }
+
+  &__logo {
+    margin-bottom: 40px;
+
+    &-img {
+      width: 40px;
+      height: 40px;
+    }
+
+    p {
+      font-family: 'Raleway', sans-serif;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 24px;
+      color: #e1e8f1;
+    }
+  }
+
+  &__text {
+    font-weight: 300;
+    color: #90a2bc;
+    max-width: 197px;
+
+    @include adaptiv-margin-right(128, 0);
+
+    @media screen and (max-width: 768px) {
+      max-width: 100%;
+      text-align: center;
+      margin-bottom: 86px;
+      margin-right: 0;
+    }
+  }
+
+  &__copyright {
     padding-top: 46px;
     border-top: 1px solid #354153;
     color: #60738f;
