--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,11 +1,24 @@
 .header {
   background-color: transparent;
+  z-index: 10;
 
   .brand {
-    max-height: 50px;
-    max-width: 160px;
     margin-right: 100px;
     z-index: 5;
+
+    h1 {
+      font-family: 'Raleway', sans-serif;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 24px;
+      color: #111622;
+    }
+
+    &__img {
+      width: 40px;
+      height: 40px;
+      margin-right: 10px;
+    }
   }
 }
 
