--- a/template-parts/block/brands/style.scss
+++ b/template-parts/block/brands/style.scss
@@ -1,41 +1,113 @@
+.brands {
+  overflow: hidden;
+  background: #f8fafc;
+  padding-top: 80px;
+  padding-bottom: 80px;
 
-.repeater {
-  .title {
-    @include adaptiv-margin-bottom(40, 20);
+  &__title {
+    text-align: center;
+    color: #60738f;
+    font-weight: 500;
+    line-height: 32px;
+    margin-bottom: 32px;
   }
 
   &__main {
-  }
-
-  &__item {
-    max-width: 360px;
-  }
-  &__icon {
-    margin-right: 20px;
+    overflow: hidden;
   }
 }
 
-@media screen and (max-width: 1024px) {
+.brands-slider {
+  margin: 0 -10px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+
+  &::before,
+  &::after {
+    content: '';
+    max-width: 197px;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #F8FAFC 0%, rgba(248, 250, 252, 0) 100%);
+    position: absolute;
+    top: 0;
+    z-index: 1;
+  }
+
+  &::before {
+    left: 0;
+  }
+
+  &::after {
+    right: 0;
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+  }
+
+  .slick-slide {
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+
+  .slick-list {
+    max-width: 100vw;
+  }
+
+  .slick-track {
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .brands-item {
+    //max-width: 240px;
+    //max-height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      object-fit: cover;
+    }
+  }
 }
 
-@media screen and (max-width: 768px) {
-  .repeater {
+@media (max-width: 768px) {
+  .brands {
+    padding-top: 80px;
+    padding-bottom: 80px;
 
-    &__main {
+    &__title {
+      margin-bottom: 16px;
+    }
+  }
+
+  .brands-slider {
+    .slick-slider {
+      margin: 0;
     }
 
-    &__item {
-      max-width: 100%;
-      &:not(:last-child){
-        margin-bottom: 30px;
-      }
+    .slick-slid {
+      margin-right: 0;
+      margin-left: 0;
+    }
+
+    .brands-item {
     }
   }
 }
 
+@media (max-width: 576px) {
+  .brands-slider {
 
+    &::before,
+    &::after {
+      max-width: 100px;
+    }
 
-
-
-
-
+    .brands-item {
+      width: 176px !important;
+      height: 100px;
+    }
+  }
+}
