--- a/template-parts/block/repeater/style.scss
+++ b/template-parts/block/repeater/style.scss
@@ -3,6 +3,20 @@
   padding: 120px 0 240px;
   background: #0B0E14;
   color: $white;
+  position: relative;
+
+  &::after {
+    content: "";
+    max-width: 1440px;
+    max-height: 768px;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(92.4% 100% at 50% 100%, #151828 0%, rgba(21, 24, 40, 0) 26.87%);
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
 
   .title {
     @include adaptiv-margin-bottom(48, 28);
@@ -20,6 +34,8 @@
     border-radius: 12px;
     padding: 24px 24px 32px 24px;
     transition: 0.3s ease all;
+    z-index: 5;
+    position: relative;
 
     &:hover {
       border: 1px solid #6C78EA;
@@ -86,6 +102,12 @@
 @media screen and (max-width: 768px) {
   .repeater {
     padding: 60px 0 100px;
+
+    &::after {
+      max-width: 100%;
+      max-height: 100%;
+      background: radial-gradient(373.67% 100% at 50% 100%, #151828 0%, rgba(21, 24, 40, 0) 26.87%);
+    }
 
     &__main {
       grid-template-columns: repeat(1, 1fr);
