--- a/template-parts/block/side-by-side/style.scss
+++ b/template-parts/block/side-by-side/style.scss
@@ -1,16 +1,11 @@
 
 section.side-by-side {
-  .title {
-    @include adaptiv-margin-bottom(40, 20);
-  }
-
   .left {
     .image-side {
     }
 
     .content-side {
-      justify-content: flex-end;
-      padding-left: 30px;
+      padding-left: 10px;
     }
   }
 
@@ -22,53 +17,62 @@ section.side-by-side {
     }
 
     .content-side {
-      padding-right: 30px;
+      padding-right: 10px;
     }
   }
 
   .content-side {
-    display: flex;
-    align-items: center;
+    &__inner {
+      max-width: 630px;
+      width: 100%;
+    }
 
-    p {
-      max-width: 560px;
+    .sub-title {
+      margin-bottom: 40px;
+    }
+
+    .title {
+      margin-bottom: 40px;
+    }
+
+    .link {
+      color: $white;
+      background: #111622;
+      box-shadow: 0px 10px 15px -3px rgba(4, 19, 49, 0.1), 0px 4px 6px -4px rgba(4, 19, 49, 0.1);
+      border-radius: 6px;
+      padding: 12px 20px;
+      font-weight: 500;
+      font-size: 18px;
     }
   }
 
   .image-side {
-
     overflow: hidden;
     display: flex;
 
     &__img {
-      max-width: 660px;
-      max-height: 415px;
+      max-width: 630px;
+      max-height: 488px;
       width: 100%;
       height: 100%;
-    }
 
-    > img {
-      object-fit: cover;
+      img {
+        object-fit: cover;
+      }
     }
   }
 }
 
 @media screen and (max-width: 1024px) {
-}
-
-@media screen and (max-width: 768px) {
   section.side-by-side {
-    .title {
-      @include adaptiv-margin-bottom(40, 20);
-    }
 
     .left {
       .image-side {
-        margin-bottom: 30px;
       }
+
       .content-side {
         padding-left: 0;
-        justify-content: center;
+        //justify-content: center;
       }
     }
 
@@ -81,31 +85,29 @@ section.side-by-side {
 
       .content-side {
         padding-right: 0;
-        margin-bottom: 30px;
       }
     }
 
     .content-side {
-      p {
-        max-width: 100%;
+      margin-bottom: 8px;
+      .link {
+        margin-bottom: 40px;
       }
     }
 
     .image-side {
-
-      &__img {
-        max-width: 100%;
-        max-height: 415px;
-        width: 100%;
-        height: 100%;
-      }
     }
   }
 }
 
+@media screen and (max-width: 768px) {
+  section.side-by-side {
 
+    .content-side {
 
-
-
-
-
+      &__inner {
+        max-width: 500px;;
+      }
+    }
+  }
+}
