--- a/template-parts/block/features/style.scss
+++ b/template-parts/block/features/style.scss
@@ -5,7 +5,7 @@
   color: #90a2bc;
   background-repeat: no-repeat;
   background-attachment: local;
-  background-position: top center;
+  background-position: bottom center;
   position: relative;
 
   &::after {
