--- a/template-parts/block/about-price/style.scss
+++ b/template-parts/block/about-price/style.scss
@@ -33,7 +33,7 @@
     &-bg {
       position: absolute;
       top: -85px;
-      right: -15px;
+      right: 0;
     }
 
     &-inner {
@@ -131,7 +131,6 @@
 
     &__card {
       &-bg {
-        position: absolute;
         top: -100px;
         left: 0;
       }
@@ -143,7 +142,6 @@
   .about-price {
     padding: 80px 0 120px;
     background-position: bottom center;
-    //background-image: url("../../uploads/2023/02/🚗 Illustration_here.png");
 
     &__text {
       margin-bottom: 50px;
@@ -156,12 +154,41 @@
 
     &__card {
       &-bg {
-        display: none;
+        img {
+        }
       }
     }
 
     &__qualities {
       margin-bottom: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .about-price {
+
+    &__text {
+    }
+
+    &__desc {
+    }
+
+    &__card {
+      &-bg {
+        top: -7%;
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: fit-content;
+
+        img {
+          width: 750px;
+          height: 600px;
+        }
+      }
+    }
+
+    &__qualities {
     }
   }
 }
