--- a/template-parts/block/automatically/style.scss
+++ b/template-parts/block/automatically/style.scss
@@ -20,6 +20,18 @@
     position: relative;
   }
 
+  &__bg {
+    position: absolute;
+    max-width: 1440px;
+    max-height: 960px;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 2;
+  }
+
   .sub-title {
     margin-bottom: 16px;
   }
@@ -29,6 +41,11 @@
   }
 
   &__image {
+    background: rgba(255, 255, 255, 0.12);
+    box-shadow: 0 20px 25px -5px rgba(4, 19, 49, 0.1), 0px 8px 10px -6px rgba(4, 19, 49, 0.1), 0px 24px 120px -6px rgba(4, 19, 49, 0.24);
+    backdrop-filter: blur(4px);
+    border-radius: 24px 24px 0 0;
+    padding: 20px 20px 0 20px;
     max-width: 1064px;
     max-height: 640px;
     width: 100%;
@@ -57,6 +74,7 @@
     }
 
     &__image {
+      padding: 10px 10px 0 10px;
     }
   }
 }
