--- a/template-parts/block/hero1/style.scss
+++ b/template-parts/block/hero1/style.scss
@@ -7,9 +7,14 @@
   background-position: top center;
 
   &__main {
+
   }
 
   &__content {
+    //max-width: 738px;
+    padding-right: calc(100% - (100% - 600px));
+    padding-top: 148px;
+    padding-bottom: 132px;
   }
 
   .sub-title {
@@ -17,16 +22,13 @@
   }
 
   .title {
-    @include adaptiv-font(56, 32);
-    @include adaptiv-line-height(72, 46);
-
     margin-bottom: 20px;
   }
 
   &__desc {
     font-size: 18px;
     line-height: 31.5px;
-    @include adaptiv-margin-bottom(72, 0);
+    margin-bottom: 72px;
   }
 
   &__link {
@@ -68,11 +70,20 @@
   }
 
   &__image {
+    position: absolute;
     max-width: 684px;
     max-height: 720px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-repeat: no-repeat;
+    background-attachment: local;
+    background-position: top center;
 
     img {
-      object-fit: cover;
+      z-index: 3;
+      position: relative;
     }
   }
 }
@@ -84,15 +95,13 @@
     }
 
     &__content {
-      max-width: 684px;
-      width: 100%;
+      max-width: 738px;
       padding-right: 0;
       padding-top: 108px;
       padding-bottom: 0;
     }
 
     &__desc {
-      margin-bottom: 66px;
     }
 
     &__link {
@@ -102,10 +111,13 @@
     }
 
     &__image {
+      position: initial;
       max-width: 684px;
       max-height: 720px;
       width: 100%;
       height: 100%;
+      display: flex;
+      flex-direction: column;
     }
   }
 }
@@ -118,12 +130,6 @@
 
     &__content {
       padding-top: 170px;
-    }
-
-    &__title {
-      font-size: 40px;
-      line-height: 50px;
-      margin-bottom: 32px;
     }
 
     &__desc {
