--- a/template-parts/block/reviews/style.scss
+++ b/template-parts/block/reviews/style.scss
@@ -1,5 +1,5 @@
 :root {
-  --masonryGutter: 1.7%;
+  --masonryGutter: 20px;
 }
 
 .reviews {
@@ -66,7 +66,7 @@
 @media screen and (max-width: 768px) {
   .reviews {
     &__main {
-      padding: 24px;
+      padding: 14px;
     }
 
     &__item {
