--- a/assets/styles/blocks/accordion.scss
+++ b/assets/styles/blocks/accordion.scss
@@ -20,8 +20,8 @@
   ul {
     max-width: 738px;
     width: 100%;
-    border-top: 1px solid #E1E8F1;
-    border-bottom: 1px solid #E1E8F1;
+    border-top: 1px solid #e1e8f1;
+    border-bottom: 1px solid #e1e8f1;
 
     li {
       background: $white;
@@ -32,14 +32,14 @@
       color: #111622;
 
       &:not(:last-child) {
-        border-bottom: 1px solid #E1E8F1;
+        border-bottom: 1px solid #e1e8f1;
       }
     }
   }
 
   .question {
     cursor: pointer;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 
     &__image {
       margin-right: 20px;
@@ -49,7 +49,7 @@
       font-weight: 600;
       font-size: 20px;
       line-height: 32px;
-      transition: .3s color ease;
+      transition: 0.3s color ease;
     }
 
     &__icon {
@@ -107,7 +107,7 @@
   .answer {
     max-height: 0;
     overflow: hidden;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
@@ -149,5 +149,3 @@
     }
   }
 }
-
-
