--- a/assets/styles/blocks/brands.scss
+++ b/assets/styles/blocks/brands.scss
@@ -29,7 +29,7 @@
     max-width: 197px;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, #F8FAFC 0%, rgba(248, 250, 252, 0) 100%);
+    background: linear-gradient(90deg, #f8fafc 0%, rgba(248, 250, 252, 0) 100%);
     position: absolute;
     top: 0;
     z-index: 1;
@@ -91,15 +91,11 @@
       margin-right: 0;
       margin-left: 0;
     }
-
-    .brands-item {
-    }
   }
 }
 
 @media (max-width: 576px) {
   .brands-slider {
-
     &::before,
     &::after {
       max-width: 100px;
