--- a/assets/styles/blocks/features.scss
+++ b/assets/styles/blocks/features.scss
@@ -23,6 +23,7 @@
 
   .sub-title {
     @include adaptiv-margin-bottom(12, 10);
+
     background: rgba(28, 44, 74, 0.5);
     align-self: center;
     z-index: 1;
@@ -30,12 +31,13 @@
 
   .title {
     @include adaptiv-margin-bottom(92, 30);
+
     max-width: 630px;
     font-weight: 600;
     font-size: 32px;
     line-height: 48px;
     text-align: center;
-    color: #ffffff;
+    color: #fff;
     align-self: center;
   }
 
@@ -51,7 +53,6 @@
   }
 
   &__item {
-
     &-inner {
       display: inline;
       font-size: 16px;
@@ -59,7 +60,7 @@
       font-weight: 400;
 
       strong {
-        color: #ffffff;
+        color: #fff;
         font-weight: 600;
       }
 
@@ -80,7 +81,6 @@
       margin-right: 10px;
     }
   }
-
 }
 
 @media screen and (max-width: 1024px) {
@@ -95,6 +95,7 @@
 @media screen and (max-width: 768px) {
   .features {
     background-position: bottom center;
+
     &::after {
       max-width: 100%;
       max-height: 100%;
