--- a/assets/styles/blocks/hero.scss
+++ b/assets/styles/blocks/hero.scss
@@ -1,16 +1,10 @@
 
 .hero {
   background-color: #f8fafc;
-  border-bottom: 1px solid #E1E8F1;
+  border-bottom: 1px solid #e1e8f1;
   background-repeat: no-repeat;
   background-attachment: local;
   background-position: top center;
-
-  &__main {
-  }
-
-  &__content {
-  }
 
   .sub-title {
     margin-bottom: 20px;
@@ -26,23 +20,24 @@
   &__desc {
     font-size: 18px;
     line-height: 31.5px;
+
     @include adaptiv-margin-bottom(72, 0);
   }
 
   &__link {
     background: #111622;
-    box-shadow: 0 10px 15px -3px rgba(4, 19, 49, 0.1), 0px 4px 6px -4px rgba(4, 19, 49, 0.1);
+    box-shadow: 0 10px 15px -3px rgba(4, 19, 49, 0.1), 0 4px 6px -4px rgba(4, 19, 49, 0.1);
     padding: 12px 28px;
     border-radius: 6px;
     margin-bottom: 16px;
     font-weight: 500;
     font-size: 18px;
     color: $white;
-    transition: .3s ease all;
+    transition: 0.3s ease all;
 
     svg {
       margin-left: 13.7px;
-      transition: .3s ease all;
+      transition: 0.3s ease all;
     }
 
     &:hover {
@@ -61,7 +56,8 @@
   &__footnote {
     font-size: 16px;
     line-height: 28px;
-    color: #46556A;
+    color: #46556a;
+
     @media screen and (max-width: 576px) {
       align-self: center;
     }
@@ -79,10 +75,6 @@
 
 @media screen and (max-width: 1024px) {
   .hero {
-
-    &__main {
-    }
-
     &__content {
       max-width: 684px;
       width: 100%;
@@ -93,12 +85,6 @@
 
     &__desc {
       margin-bottom: 66px;
-    }
-
-    &__link {
-    }
-
-    &__footnote {
     }
 
     &__image {
@@ -112,10 +98,6 @@
 
 @media screen and (max-width: 768px) {
   .hero {
-
-    &__main {
-    }
-
     &__content {
       padding-top: 170px;
     }
@@ -141,6 +123,11 @@
     }
 
     &__image {
+      background-repeat: no-repeat;
+      background-attachment: local;
+      background-position: top center;
+      display: flex;
+      flex-direction: column;
     }
   }
 }
