--- a/assets/styles/blocks/hero1.scss
+++ b/assets/styles/blocks/hero1.scss
@@ -1,14 +1,10 @@
 
 .hero {
   background-color: #f8fafc;
-  border-bottom: 1px solid #E1E8F1;
+  border-bottom: 1px solid #e1e8f1;
   background-repeat: no-repeat;
   background-attachment: local;
   background-position: top center;
-
-  &__main {
-
-  }
 
   &__content {
     //max-width: 738px;
@@ -33,18 +29,18 @@
 
   &__link {
     background: #111622;
-    box-shadow: 0 10px 15px -3px rgba(4, 19, 49, 0.1), 0px 4px 6px -4px rgba(4, 19, 49, 0.1);
+    box-shadow: 0 10px 15px -3px rgba(4, 19, 49, 0.1), 0 4px 6px -4px rgba(4, 19, 49, 0.1);
     padding: 12px 28px;
     border-radius: 6px;
     margin-bottom: 16px;
     font-weight: 500;
     font-size: 18px;
     color: $white;
-    transition: .3s ease all;
+    transition: 0.3s ease all;
 
     svg {
       margin-left: 13.7px;
-      transition: .3s ease all;
+      transition: 0.3s ease all;
     }
 
     &:hover {
@@ -63,7 +59,8 @@
   &__footnote {
     font-size: 16px;
     line-height: 28px;
-    color: #46556A;
+    color: #46556a;
+
     @media screen and (max-width: 576px) {
       align-self: center;
     }
@@ -90,24 +87,11 @@
 
 @media screen and (max-width: 1024px) {
   .hero {
-
-    &__main {
-    }
-
     &__content {
       max-width: 738px;
       padding-right: 0;
       padding-top: 108px;
       padding-bottom: 0;
-    }
-
-    &__desc {
-    }
-
-    &__link {
-    }
-
-    &__footnote {
     }
 
     &__image {
@@ -124,10 +108,6 @@
 
 @media screen and (max-width: 768px) {
   .hero {
-
-    &__main {
-    }
-
     &__content {
       padding-top: 170px;
     }
@@ -144,9 +124,6 @@
 
     &__footnote {
       margin-bottom: 11px;
-    }
-
-    &__image {
     }
   }
 }
