--- a/assets/styles/blocks/prefooter.scss
+++ b/assets/styles/blocks/prefooter.scss
@@ -1,5 +1,5 @@
 .prefooter {
-  background: radial-gradient(45.56% 137.97% at 76.04% 50%, #191933 0%, #000000 100%), #0D111C;
+  background: radial-gradient(45.56% 137.97% at 76.04% 50%, #191933 0%, #000 100%), #0d111c;
   position: relative;
 
   &__main {
@@ -31,7 +31,7 @@
     font-size: 48px;
     line-height: 48px;
     text-align: center;
-    color: #ffffff;
+    color: #fff;
     align-self: center;
 
     @media screen and (max-width: 576px) {
@@ -41,10 +41,10 @@
   }
 
   &__form {
-
     .wpcf7 form {
       position: relative;
       width: 413px;
+
       @media screen and (max-width: 576px) {
         width: 100%;
       }
@@ -52,24 +52,26 @@
       input:not(.wpcf7-submit) {
         width: 413px;
         height: 48px;
-        background: #0C0F17;
-        color: #E1E8F1;
+        background: #0c0f17;
+        color: #e1e8f1;
         padding: 12px;
-        border: 1px solid #1F293A;
+        border: 1px solid #1f293a;
         border-radius: 6px;
         box-sizing: border-box;
         cursor: pointer;
         outline: none;
+
         @media screen and (max-width: 578px) {
           width: 100%;
         }
 
         &::placeholder {
-          color: #60738F;
+          color: #60738f;
         }
 
         &.myclass {
           width: 301px;
+
           @media screen and (max-width: 578px) {
             width: 100%;
           }
@@ -79,21 +81,20 @@
       }
 
       input[type="submit"] {
-
         position: absolute;
         top: 88px;
         right: 0;
         width: 100px;
         height: 48px;
         color: $white;
-        background: linear-gradient(180deg, #6C78EA 0%, #6E79E4 100%);
-        box-shadow: 0px 4px 8px rgba(48, 63, 214, 0.6), 0px 12px 32px rgba(48, 63, 214, 0.4);
+        background: linear-gradient(180deg, #6c78ea 0%, #6e79e4 100%);
+        box-shadow: 0 4px 8px rgba(48, 63, 214, 0.6), 0 12px 32px rgba(48, 63, 214, 0.4);
         border-radius: 6px;
         transition: 0.3s ease-in-out;
         cursor: pointer;
 
         &:hover {
-          background: linear-gradient(180deg, #3444E2 0%, #5362F6 100%);
+          background: linear-gradient(180deg, #3444e2 0%, #5362f6 100%);
         }
 
         @media screen and (max-width: 576px) {
@@ -103,8 +104,7 @@
       }
 
       input:-internal-autofill-selected {
-
-        background-color: #0C0F17 !important;
+        background-color: #0c0f17 !important;
         color: fieldtext !important;
       }
 
@@ -113,7 +113,7 @@
         padding: 12px;
         min-height: 48px;
         color: $white;
-        border: 1px solid #6C78EA;
+        border: 1px solid #6c78ea;
         border-radius: 6px;
       }
 
