--- a/assets/styles/blocks/reviews.scss
+++ b/assets/styles/blocks/reviews.scss
@@ -16,14 +16,14 @@
   }
 
   &__main {
-    background: #F2F5F9;
+    background: #f2f5f9;
     border-radius: 40px;
     padding: 38px;
   }
 
   &__item {
     background: $white;
-    box-shadow: 0 20px 25px -5px rgba(4, 19, 49, 0.1), 0px 8px 10px -6px rgba(4, 19, 49, 0.1);
+    box-shadow: 0 20px 25px -5px rgba(4, 19, 49, 0.1), 0 8px 10px -6px rgba(4, 19, 49, 0.1);
     border-radius: 12px;
     padding: 20px;
     margin: calc(var(--masonryGutter) / 2);
@@ -44,7 +44,7 @@
   }
 
   &__name {
-    color: #1F293A;
+    color: #1f293a;
     font-weight: 600;
     font-size: 16px;
   }
@@ -56,7 +56,6 @@
 
 @media screen and (max-width: 1024px) {
   .reviews {
-
     &__item {
       width: calc(100% / 2 - var(--masonryGutter));
     }
