--- a/assets/styles/blocks/side-by-side.scss
+++ b/assets/styles/blocks/side-by-side.scss
@@ -1,26 +1,5 @@
 
 section.side-by-side {
-  .left {
-    .image-side {
-    }
-
-    .content-side {
-      padding-left: 10px;
-    }
-  }
-
-  .right {
-    flex-direction: row-reverse;
-
-    .image-side {
-      justify-content: flex-end;
-    }
-
-    .content-side {
-      padding-right: 10px;
-    }
-  }
-
   .content-side {
     &__inner {
       max-width: 630px;
@@ -38,12 +17,12 @@ section.side-by-side {
     .link {
       color: $white;
       background: #111622;
-      box-shadow: 0px 10px 15px -3px rgba(4, 19, 49, 0.1), 0px 4px 6px -4px rgba(4, 19, 49, 0.1);
+      box-shadow: 0 10px 15px -3px rgba(4, 19, 49, 0.1), 0 4px 6px -4px rgba(4, 19, 49, 0.1);
       border-radius: 6px;
       padding: 12px 20px;
       font-weight: 500;
       font-size: 18px;
-      transition: .3s ease all;
+      transition: 0.3s ease all;
 
       &:hover {
         background-color: $indigo;
@@ -66,15 +45,37 @@ section.side-by-side {
       }
     }
   }
+
+  .left {
+    .content-side {
+      padding-left: 10px;
+    }
+  }
+
+  .right {
+    flex-direction: row-reverse;
+
+    .image-side {
+      justify-content: flex-end;
+    }
+
+    .content-side {
+      padding-right: 10px;
+    }
+  }
 }
 
 @media screen and (max-width: 1024px) {
   section.side-by-side {
+    .content-side {
+      margin-bottom: 8px;
+
+      .link {
+        margin-bottom: 40px;
+      }
+    }
 
     .left {
-      .image-side {
-      }
-
       .content-side {
         padding-left: 0;
         //justify-content: center;
@@ -92,27 +93,14 @@ section.side-by-side {
         padding-right: 0;
       }
     }
-
-    .content-side {
-      margin-bottom: 8px;
-
-      .link {
-        margin-bottom: 40px;
-      }
-    }
-
-    .image-side {
-    }
   }
 }
 
 @media screen and (max-width: 768px) {
   section.side-by-side {
-
     .content-side {
-
       &__inner {
-        max-width: 500px;;
+        max-width: 500px;
       }
     }
   }
