--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -18,17 +18,17 @@
 @import "layouts/footer";
 
 /** Import everything from section */
-@import "template-parts/block/spacer/style";
-@import "template-parts/block/hero/style";
-@import "template-parts/block/side-by-side/style";
-@import "template-parts/block/accordion/style";
-@import "template-parts/block/repeater/style";
-@import "template-parts/block/reviews/style";
-@import "template-parts/block/features/style";
-@import "template-parts/block/brands/style";
-@import "template-parts/block/automatically/style";
-@import "template-parts/block/about-price/style";
-@import "template-parts/block/prefooter/style";
+@import "blocks/spacer";
+@import "blocks/hero";
+@import "blocks/side-by-side";
+@import "blocks/accordion";
+@import "blocks/repeater";
+@import "blocks/reviews";
+@import "blocks/features";
+@import "blocks/brands";
+@import "blocks/automatically";
+@import "blocks/about-price";
+@import "blocks/prefooter";
 
 /**
  * Import npm dependencies
