--- a/assets/styles/blocks/about-price.scss
+++ b/assets/styles/blocks/about-price.scss
@@ -37,7 +37,10 @@
     }
 
     &-inner {
-      background: radial-gradient(88.59% 88.59% at 13.29% 88.59%, rgba(35, 220, 220, 0.2) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(83.12% 83.12% at 88.29% 16.88%, rgba(35, 76, 220, 0.2) 0%, rgba(0, 0, 0, 0) 100%), rgba(16, 21, 30, 0.9);
+      background:
+        radial-gradient(88.59% 88.59% at 13.29% 88.59%, rgba(35, 220, 220, 0.2) 0%, rgba(0, 0, 0, 0) 100%),
+        radial-gradient(83.12% 83.12% at 88.29% 16.88%, rgba(35, 76, 220, 0.2) 0%, rgba(0, 0, 0, 0) 100%);
+      background-color: rgba(16, 21, 30, 0.9);
       border: 1px solid rgba(202, 213, 226, 0.08);
       border-radius: 12px;
       z-index: 2;
