--- a/assets/styles/blocks/features.scss
+++ b/assets/styles/blocks/features.scss
@@ -1,30 +1,14 @@
 
 .features {
   padding: 65px 0 128px;
-  background-color: #0b0e14;
-  color: #90a2bc;
   background-repeat: no-repeat;
   background-attachment: local;
   background-position: bottom center;
   position: relative;
 
-  &::after {
-    content: "";
-    max-width: 1440px;
-    max-height: 736px;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(92.4% 100% at 50% 0%, #151828 0%, rgba(21, 24, 40, 0) 26.81%);
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-  }
-
   .sub-title {
     @include adaptiv-margin-bottom(12, 10);
 
-    background: rgba(28, 44, 74, 0.5);
     align-self: center;
     z-index: 1;
   }
@@ -32,24 +16,37 @@
   .title {
     @include adaptiv-margin-bottom(92, 30);
 
-    max-width: 630px;
     font-weight: 600;
     font-size: 32px;
     line-height: 48px;
     text-align: center;
-    color: #fff;
     align-self: center;
   }
 
   &__main {
     @include adaptiv-padding-left(108, 0);
     @include adaptiv-padding-right(108, 0);
+
+    @media screen and (min-width: 1441px) {
+      padding-right: 108px;
+      padding-left: 108px;
+    }
   }
 
   &__list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 48px;
+
+    @media screen and (max-width: 1024px) {
+      grid-template-columns: 1fr 1fr;
+      gap: 30px;
+    }
+
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 1fr;
+      gap: 30px;
+    }
   }
 
   &__item {
@@ -60,7 +57,6 @@
       font-weight: 400;
 
       strong {
-        color: #fff;
         font-weight: 600;
       }
 
@@ -81,30 +77,68 @@
       margin-right: 10px;
     }
   }
-}
 
-@media screen and (max-width: 1024px) {
-  .features {
-    &__list {
-      grid-template-columns: 1fr 1fr;
-      gap: 30px;
-    }
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .features {
-    background-position: bottom center;
+  &.dark-style {
+    background-color: #0b0e14;
+    color: #90a2bc;
 
     &::after {
-      max-width: 100%;
-      max-height: 100%;
-      background: radial-gradient(461.67% 100% at 50% 0%, #151828 0%, rgba(21, 24, 40, 0) 26.81%);
+      content: "";
+      max-width: 1440px;
+      max-height: 736px;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(92.4% 100% at 50% 0%, #151828 0%, rgba(21, 24, 40, 0) 26.81%);
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, 0);
+
+      @media screen and (max-width: 768px) {
+        max-width: 100%;
+        max-height: 100%;
+        background: radial-gradient(461.67% 100% at 50% 0%, #151828 0%, rgba(21, 24, 40, 0) 26.81%);
+      }
     }
 
-    &__list {
-      grid-template-columns: 1fr;
-      gap: 30px;
+    .sub-title {
+      background: rgba(28, 44, 74, 0.5);
     }
+
+    .title {
+      color: #fff;
+      max-width: 630px;
+    }
+
+    &__item {
+      &-inner {
+        strong {
+          color: #fff;
+        }
+      }
+    }
+  }
+
+  &.light-style {
+    background-color: #f8f9fc;
+    color: #46556a;
+    padding: 120px 0;
+
+    .title {
+      color: $text-color;
+      max-width: 800px;
+    }
+
+    &__item {
+      &-inner {
+        strong {
+          color: #0c0f17;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    background-position: bottom center;
   }
 }
