--- a/assets/styles/blocks/hero.scss
+++ b/assets/styles/blocks/hero.scss
@@ -14,6 +14,11 @@
     @include adaptiv-font(56, 32);
     @include adaptiv-line-height(72, 46);
 
+    @media screen and (min-width: 1440px) {
+      font-size: 56px;
+      line-height: 72px;
+    }
+
     margin-bottom: 20px;
   }
 
@@ -22,18 +27,30 @@
     line-height: 31.5px;
 
     @include adaptiv-margin-bottom(72, 0);
+
+    @media screen and (min-width: 1440px) {
+      margin-bottom: 72px;
+    }
+  }
+
+  &__repeater {
+    padding-top: 10px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 24px;
+  }
+
+  &__item {
+    &-icon {
+      max-width: 48px;
+      max-height: 48px;
+      flex: 1 1 100%;
+      margin-right: 24px;
+    }
   }
 
   &__link {
-    background: #111622;
-    box-shadow: 0 10px 15px -3px rgba(4, 19, 49, 0.1), 0 4px 6px -4px rgba(4, 19, 49, 0.1);
-    padding: 12px 28px;
-    border-radius: 6px;
     margin-bottom: 16px;
-    font-weight: 500;
-    font-size: 18px;
-    color: $white;
-    transition: 0.3s ease all;
 
     svg {
       margin-left: 13.7px;
@@ -41,8 +58,6 @@
     }
 
     &:hover {
-      background-color: $indigo;
-
       svg {
         margin-left: 20px;
       }
@@ -71,6 +86,102 @@
       object-fit: cover;
     }
   }
+
+  &__form {
+    padding-left: 20px;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    .wpcf7 {
+      background: rgba(255, 255, 255, 0.8);
+      border: 1px solid #e1e8f1;
+      box-shadow: 0 32px 40px -5px rgba(4, 19, 49, 0.16), 0 12px 12px -6px rgba(4, 19, 49, 0.1);
+      border-radius: 24px;
+      padding: 40px;
+      margin: 120px 0;
+      max-width: 520px;
+      width: 100%;
+
+      form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        p {
+          width: 48%;
+
+          &:nth-of-type(5) {
+            width: 100%;
+          }
+
+          &:nth-of-type(6) {
+            width: 100%;
+          }
+        }
+      }
+
+      input:not(.wpcf7-submit) {
+        width: 100%;
+        height: 32px;
+        background: #fff;
+        border: 1px solid #8690f9;
+        border-radius: 6px;
+        margin-top: 6px;
+        padding: 8px 12px;
+        margin-bottom: 32px;
+
+        &:focus,
+        &:active {
+          box-shadow: 0 0 0 2px rgba(85, 76, 230, 0.2);
+        }
+
+        &.wpcf7-not-valid {
+          border: 1px solid #eb4999;
+        }
+      }
+
+      textarea {
+        width: 100%;
+        height: 124px;
+        resize: none;
+        background: #fff;
+        border: 1px solid #cad5e2;
+        border-radius: 6px;
+        margin-bottom: 32px;
+        margin-top: 6px;
+        padding: 8px 12px;
+
+        &::placeholder {
+          font-size: 14px;
+          line-height: 20px;
+          color: #46556a;
+        }
+      }
+
+      input[type="submit"] {
+        width: 100%;
+        background: #111622;
+        color: #fff;
+        box-shadow: 0 2px 3px -2px rgba(4, 19, 49, 0.1), 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        border-radius: 6px;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .wpcf7-spinner {
+        display: none;
+      }
+
+      .wpcf7-not-valid-tip {
+        position: absolute;
+        top: 32px;
+        background-color: #f8fafc;
+        color: #eb4999;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -85,6 +196,15 @@
 
     &__desc {
       margin-bottom: 66px;
+    }
+
+    &__form {
+      padding-left: 0;
+
+      .wpcf7 {
+        padding: 40px;
+        margin: 120px 0;
+      }
     }
 
     &__image {
@@ -128,6 +248,21 @@
       background-position: top center;
       display: flex;
       flex-direction: column;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .hero {
+    &__form {
+      .wpcf7 {
+        padding: 30px;
+        margin: 100px 0;
+
+        p {
+          width: 100% !important;
+        }
+      }
     }
   }
 }
